--- a/public/wp-content/themes/trentaquattro/app/views/includes/menu.html.twig
+++ b/public/wp-content/themes/trentaquattro/app/views/includes/menu.html.twig
@@ -1,4 +1,4 @@
-<section class="page" id="menu">
+<section class="page" id="menu" style="background-image: url({{ TimberImage(page.menu.get_field("pictureleft")).src }}), url({{ TimberImage(page.menu.get_field("pictureright")).src }})">
 	<header style="background-image: url({{ page.menu.thumbnail }});">
 		<h1 class="vcenter">{{ page.menu.title }}</h1>
 	</header>
