--- a/public/wp-content/themes/trentaquattro/web/styles/pages/Contact.less
+++ b/public/wp-content/themes/trentaquattro/web/styles/pages/Contact.less
@@ -1,3 +1,39 @@
 #contact {
-	
+	height: 450px;
+	background: #424242;
+	> * {
+		width: 50%;
+		display: inline-block;
+		vertical-align: middle;
+	}
+	> .map {
+		height: 100%;
+		> #map {
+			width: 100%;
+			height: 100%;
+			display: block;
+		}
+	}
+
+	> .description {
+		> div {
+			color: #fff;
+			width: 90%;
+			margin-left: auto;
+			margin-right: auto;
+			padding-top: 20px;
+			padding-bottom: 20px;
+			h1, h2, h3 {
+				font-size: 20px;
+				font-family: "Nexa Rust Slab Black Shadow 01";
+				color: #fff;
+			}
+			p, li {
+				font-size: 14px;
+			}
+			strong {
+				
+			}
+		}
+	}
 }
