--- a/public/wp-content/themes/trentaquattro/app/views/includes/contact.html.twig
+++ b/public/wp-content/themes/trentaquattro/app/views/includes/contact.html.twig
@@ -1,7 +1,9 @@
 <section class="page" id="contact">
-	<section class="map" id="map"></section>
+	<section class="map" id="map-wrapper"><div id="map" data-map="{{ page.contact.get_field("address") }}"></div></section>
 	<section class="description">
-		<h1>{{ post.title }}</h1>
-		{{ post.content }}
+		<div>
+			<h1>{{ page.contact.title }}</h1>
+			{{ page.contact.content }}
+		</diV>
 	</section>
 </section>
