--- a/public/wp-content/themes/trentaquattro/app/views/layouts/base.twig
+++ b/public/wp-content/themes/trentaquattro/app/views/layouts/base.twig
@@ -19,6 +19,7 @@
 	{% endblock %}
 
 	{% block javascriptBlock %}
+		<script type="text/javascript" src="https://maps.google.com/maps/api/js"></script>
 		<script src="{{site.theme.link}}/static/web.js" type="text/javascript"></script>
 	{% endblock %}
 
@@ -49,8 +50,8 @@
 
 		{% block footer %}
 			<footer role="contentinfo" id="main-footer">
-				<p>{{ "footer.lbl.followUs"|trans }}</p>
-				<p><a href="https://facebook.com/trentaquattro"><em class="fa fa-facebook"></em></a></p>
+				<p>{{ __("Nous suivre sur", "il-trentaquattro-label") }}</p>
+				<p><a href="https://facebook.com/Trentaquattro.be"><em class="fa fa-facebook"></em></a></p>
 			</footer>
 			{{ function('wp_footer') }}
 		{% endblock %}
