--- a/public/wp-content/themes/trentaquattro/web/styles/main.less
+++ b/public/wp-content/themes/trentaquattro/web/styles/main.less
@@ -56,6 +56,9 @@
 		max-width: @commonGridSize;
 		width: 100%;
 		margin: 0 auto;
+		@media screen and (max-width: 768px) {
+			width: 90%;
+		}
 	}
 }
 
