--- a/public/wp-content/themes/trentaquattro/web/styles/pages/Restaurant.less
+++ b/public/wp-content/themes/trentaquattro/web/styles/pages/Restaurant.less
@@ -7,6 +7,7 @@
 		img {
 			display: inline-block;
 			vertical-align: middle;
+			max-width: 90%;
 		}
 	}
 
@@ -19,15 +20,28 @@
 			margin-right: 15%;
 			display: inline-block;
 			vertical-align: middle;
+			@media screen and (max-width: 768px) {
+				width: 90%;
+				margin-left: 5%;
+				margin-right: 0;
+			}
 		}
 		> .text {
 			width: 50%;
 			display: inline-block;
 			vertical-align: middle;
+			@media screen and (max-width: 768px) {
+				width: 90%;
+				margin-left: 5%;
+				margin-right: 0;
+			}
 			h1 {
 				font-family: "Nexa Rust Slab Black Shadow 01";
 				font-size: 35px;
 				margin-bottom: 15px;
+				@media screen and (max-width: 768px) {
+					font-size: 22px;
+				}
 			}
 
 			p {
