--- a/public/wp-content/themes/trentaquattro/app/views/pages/contact.html.twig
+++ b/public/wp-content/themes/trentaquattro/app/views/pages/contact.html.twig
@@ -7,6 +7,11 @@
 		<div>
 			<h1>{{ post.title }}</h1>
 			{{ post.content }}
+
+			<form action="#" method="post">
+			    {{ form_widget(form) }}
+			    <input type="submit" value="{{ __("Nous contacter") }}" />
+			</form>
 		</div>
 	</section>
 </section>
